public/css/style.css
@font-face {
  font-family: 'Mona Sans';
  src: url('../MonaSansVF[wdth\,wght\,opsz\,ital].woff2') format("woff2");
  src: url('../MonaSansVF[wdth\,wght\,opsz\,ital].woff') format("woff");
  font-feature-settings: "ss03" on, "ss05" on, "ss06" on, "ss07" on;
}

/* LAYOUT */

body {
  color: black;
  font-family: 'Mona Sans', sans-serif;
  font-size: 120%;
  line-height: 1.5;
  margin: 0 auto;

  min-height: calc(100vh + 19rem);
  display: grid;
  grid-template-rows: auto 1fr auto;
}

header {
  min-width: 100%;
  margin: 0 auto;
}

.content {
  margin-bottom: 2rem;
  padding-bottom: 2rem;
  
  justify-content: flex-start;
  width: 45rem;
  margin: 0 auto;
}

@media screen and (max-width: 55rem) {
  .content {
    width: 90vw;
  }
}

/* HEADER */

.site-nav {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 1rem;
}

.site-nav .logo {
  font-weight: bold;
  padding-left: 0;
}

.site-title {
  text-decoration: none;
  color: black;
  padding-left: 1rem;
  font-size: larger;
}

.nav-ul {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
}

.logo {
  text-decoration: none;
}

.hdr-logo-text {
  text-decoration: none;
  color: black;
  padding-left: 1rem;
  font-size: larger;
}

.hdr-center {
  display: flex;
  align-items: center;
}

.hamburger {
  background-color: transparent;
  border: 0;
  color: hsl(0 0% 30%);
  cursor: pointer;
  display: none;
}

.hamburger:focus {
  outline: none;
}

@media screen and (max-width: 55rem) {
  .nav-ul {
    display: none;
    flex-direction: column;
    width: 100%
  }

  .nav-ul.show {
    display: flex;
  }

  .hamburger {
    display: block;
  }

  .site-nav a {
    padding: 0.5rem;
    padding-left: 0;
  }
}

.site-header {
  max-width: 72rem;
}

.nav-item {
  text-decoration: none;
  color: hsl(0 0% 30%);
  position: relative;
  font-weight: 400;
}

.nav-item::after {
  content: '';
  position: absolute; 
  left: 0;
  bottom: -0.1rem; 
  width: 0; 
  height: 2px;
  background-color: #7a0000;
  transition: width 0.2s cubic-bezier(0.4, 0, 0.2, 1); 
}

.nav-item:hover {
  color: hsl(0 0% 0%);
  transition-duration: .2s;
}

.nav-item:hover::after {
  width: 100%;
}

/* FOOTER */

footer {
  background-color: #7a0000;
  color: #ffffffd8;
  width: 100vw;
  margin: 0 auto;
  padding: 0;
  min-width: 100%;
  height: 21rem;
}

.footer-container {
  max-width: 72rem;
  margin: 0 4rem;
  padding: 1rem 0 0 0;
}

.footer {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 2rem;
}

.footer-text {
  font-size: 1.1rem;
}

.footer-heading {
  display: flex;
  flex-direction: column;
}

.footer-heading-main .footer-heading-h4 {
  margin-bottom: 2rem;
  font-weight: 600;
}

.footer-heading-a {
  color: #ffffffb0;
  text-decoration: none;
  margin-bottom: 0.5rem;
  font-size: 1.1rem;
}

.footer-heading-a:hover {
  color: #ffffff;
  transition: .2s ease-out;
}

.footer-bottom {
  margin-top: 3rem;
  padding-top: 2rem;
  border-top: 1px solid rgba(255, 255, 255, 0.1);
  font-size: 0.75rem;
  color: rgba(255, 255, 255, 0.3);
}

@media screen and (min-width: 50rem) {

}

/* LISTS */

.post-snippet {
  margin-bottom: 1rem;
}

.post-snippet h3 {
  margin-bottom: 0.25rem;
}

